--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Morpheo</title>
+  <title>Ninja Escape</title>
 </head>
 <body>
-  <canvas style="image-rendering: pixelated"></canvas>
+ 
+  <main class="main">
+    <h1>Ninja Escape</h1>
+    <canvas style="image-rendering: pixelated"></canvas></main>
+  
 <script src="./data/l_Base.js"></script>
 <script src="./data/l_Terrain.js"></script>
 <script src="./data/l_Trees_3.js"></script>
 <script src="./data/l_Trees.js"></script>
 <script src="./data/l_Trees_2.js"></script>
 <script src="./data/l_Frogs.js"></script>
+<script src="./data/l_Front_Renders.js"></script>
 <script src="./data/l_House.js"></script>
 <script src="./data/l_Boxes.js"></script>
 <script src="./data/l_Enemies.js"></script>
@@ -22,6 +27,7 @@
 <script src="./js/utils.js"></script>
 <script src="./classes/CollisionBlock.js"></script>
 <script src="./classes/Player.js"></script>
+<script src="./classes/Monster.js"></script>
 
 <script src="./js/index.js"></script>
 <script src="./js/eventListeners.js"></script>
