--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <script src="./classes/CollisionBlock.js"></script>
 <script src="./classes/Player.js"></script>
 <script src="./classes/Monster.js"></script>
+<script src="./classes/Heart.js"></script>
+<script src="./classes/Particle.js"></script>
 
 <script src="./js/index.js"></script>
 <script src="./js/eventListeners.js"></script>
