Ninja-Escape_Project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css"/>
     <title>Ninja Escape</title>
   </head>
   <body>
@@ -21,6 +21,7 @@
       </div>
 
       <canvas style="image-rendering: pixelated"></canvas>
+      <button id="play-button">PLAY</button>
       <div id="game-over" class="hidden">GAME OVER!</div>
       <div id="victory" class="hidden">YOU WON!</div>
 
@@ -50,6 +51,7 @@
 
     <script src="./js/index.js"></script>
     <script src="./js/eventListeners.js"></script>
+    <script src="./js/gamepad.js"></script>
   </body>
   <footer style="font-family: sans-serif; font-size: small; color: white; text-align: center">
     Matías Gómez. All rigths are reserved - 2024
