--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
     <script src="./js/gamepad.js"></script>
   </body>
   <footer style="font-family: sans-serif; font-size: small; color: white; text-align: center">
-    Matías Gómez. All rigths are reserved - 2024
+    Matías Gómez. All rights are reserved - 2024
   </footer>
 </html>
